--- a/Explorus-E/Properties/Resources.resx
+++ b/Explorus-E/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CollisionWall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CollisionWall.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="GemCollected" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GemCollected.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="TilesSheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TilesSheet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VIctory" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VIctory.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
