--- a/Explorus-E/Properties/Resources.resx
+++ b/Explorus-E/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="GemCollected" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GemCollected.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ThrowBubble" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ThrowBubble.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="TilesSheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TilesSheet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
